# uofa

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile.appliance  Makefile  NOTICE  PHASE2_5_STATUS_REPORT.md  PHASE2_STATUS_REPORT.md  PHASE3_STATUS_REPORT.md  README.md  TIER_A_HANDOFF.md  docker-compose.yml  hatch_build.py  jre_manifest.toml  ollama_manifest.toml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: deploy-site.yml  deploy-space.yml  release-wheels.yml  validate.yml
LICENSES/: LICENSE-ollama.txt  LICENSE-openjdk.txt  LICENSE-qwen.txt
build-config/: Makefile  hatch_build.py  jre_manifest.toml
corpus/: .gitignore  build.py  edge_case_builders.py  import_test_builders.py
dev/specs/: README.md
docker/appliance/: demo_scope.json  run-demo.sh  sip_to_cou.py  uofa.toml
docker/physicsnemo/: Dockerfile  server.py
docs/: PACK_REFACTOR_STATUS.md  UofA_Adversarial_Gen_Phase2_Spec_v1_7.md  UofA_Layered_Signal_Ablation_Spec_v0_1.md  UofA_PostRefactor_Gate_Addendum_DispositionGate.md  UofA_PostRefactor_Phase_A_Implementation_Plan.md  UofA_Surrogate_ProtoTaxonomy_v0_1.md  adversarial.md  architecture.md  design.md  explain.md  extract_eval_v1.md  getting-started.md  interrogate-surrogate-pack-implementation-plan.md  llm-config.md  m5_findings.md  onboarding.md  oos_production_v0_1.md  oos_substrate_validation.md  phase2_runbook.md  profiles.md  repo-layout.md  reviewer-render-protocol-spec.md  security.md  v0.5-morrison-deltas.md  weakener-factor-focus-cli-spec.md
docs/decisions/: 2026-05-05-oos-production.md  2026-05-05-oos-substrate.md
docs/examples/: hpt-blade-cht.md
examples/: aero.json  auto.json  medical.json  mock-aero-complete.jsonld  mock-medical-minimal.jsonld  mock-self-contained-complete.jsonld
examples/aerospace/: uofa-aero-nasa7009b.jsonld
examples/deprecated/: medical.json  mock-aero-complete.jsonld  mock-medical-minimal.jsonld
examples/morrison/: uofa_weakener.rules
examples/morrison-cou1/: sign_uofa.py  uofa-morrison-cou1.jsonld  uofa_weakener.rules  validate_morrison_cou1.py
examples/morrison-cou2/: uofa-morrison-cou2.jsonld
examples/sip_adapters/: physicsnemo_adapter.py  physicsnemo_reference.py
examples/starters/: uofa-aero-fatigue-minimal.jsonld  uofa-starter-filled.xlsx  uofa-structural-bridge-minimal.jsonld  uofa-template.xlsx
examples/templates/: uofa-complete-skeleton.jsonld  uofa-minimal-skeleton.jsonld
harness/: __init__.py  __main__.py  airfrans_pull.py  asymmetry_slice.py  cli.py  datasets.py  error_gap.py  run_corpus.py  select_split.py  train_surrogate.py
harness/bakeoff/: __init__.py  ablation.py  bootstrap_gap.py  build_corpus.py  coverage_artifacts.py  read_ablation.py  read_coverage.py  run_p0.py  score.py
harness/results/: README.md
keys/: research.key
packs/: README.md
packs/core/: pack.json  source_taxonomies.json
packs/disposition/: pack.json
packs/iso42001/: README.md  SESSION_SUMMARY.md  pack.json
packs/mrm-nist/: README.md  pack.json
packs/nasa-7009b/: pack.json
packs/surrogate/: README.md  pack.json
packs/vv40/: pack.json
schemas/: uofa.shacl.ttl  uofa_shacl.ttl  uofa_shacl_v021.ttl
scripts/: build_phase2_review_packet.py  export_view3_markdown.py  export_view_pdf.py  refresh_jre_manifest.py  score_extraction.py  sign_uofa.py
site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
site/public/: CNAME
site/scripts/: check-counts.mjs  check-pages.mjs  sync-readmes.mjs
site/src/: env.d.ts
site/tests/: cross-browser-checklist.md
snapshots/: example-counts.json
space/: DEPLOY.md  Dockerfile  Dockerfile.base  README.md  __init__.py  _extract_hooks.py  app.py  curated.py  deploy_to_hf.py  gloss.json  gloss.py  leadcapture.py  pipeline.py  requirements.txt  reviewer.py  reviewer_state.py  router.py  spike.py  start.sh  summary.py  wizard.py
spec/: README.md
spec/context/: v0.1.jsonld  v0.2.jsonld  v0.3.jsonld  v0.4.jsonld  v0.5.jsonld  v0.6.jsonld
spec/schemas/: uofa.schema.json  uofa_shacl.ttl
specs/: README.md  judge_e_output_schema.json  judge_output_schema.json  pack_manifest_schema.json  sip_evidence_bundle_schema.json
specs/calibration/: calibration_set_v1.jsonl
specs/confirm_existing/: .gitkeep  compound-01.yaml  compound-03.yaml  w-al-01.yaml  w-al-02.yaml  w-ar-01.yaml  w-ar-02.yaml  w-ar-03.yaml  w-ar-04.yaml  w-con-01.yaml  w-con-02.yaml  w-con-03.yaml  w-con-04.yaml  w-con-05.yaml  w-ep-01.yaml  w-ep-02.yaml  w-ep-03.yaml  w-ep-04.yaml  w-on-01.yaml  w-on-02.yaml  w-prov-01.yaml  w-si-01.yaml  w-si-02.yaml  w_ar_05.yaml
specs/cross_pack/: .gitkeep  README.md  cp_nasa_compound_01.yaml  cp_nasa_w_al_01.yaml  cp_nasa_w_ar_01.yaml  cp_nasa_w_ar_05.yaml  cp_nasa_w_con_01.yaml  cp_nasa_w_ep_01.yaml  cp_nasa_w_ep_04.yaml  cp_nasa_w_on_01.yaml  cp_nasa_w_prov_01.yaml  (+1 more)
tests/: conftest.py  generate_test_corpus.py  test_aero_full_pipeline_e2e.py  test_bundled_paths.py  test_c2_c3_patternid_consistency.py  test_catalog.py  test_check_cli_derivations.py  test_command_structured.py  test_corpus_edge_cases.py  test_corpus_import.py  test_demo.py  test_derivation_prepass.py  test_document_reader.py  test_excel_reader_enum_echo.py  test_excel_reader_requirement_synthesis.py  test_excel_reader_vocab_normalization.py  test_excel_writer.py  test_explain.py  test_explain_flag_integration.py  test_explain_standalone.py  test_extract_eval.py  test_extract_integration.py  test_extract_migration.py  test_firewall_chokepoint.py  test_guardrail.py  test_import_corpus.py  test_integration.py  test_interpretation_cache.py  test_interpretation_context_enrichment.py  test_interpretation_degrade.py  test_interpretation_diff_explain.py  test_interpretation_explain.py  test_interpretation_formatters.py  test_interpretation_group.py  test_interpretation_scaffolding.py  test_interpretation_shacl_explain.py  test_iso42001_pack.py  test_iso42001_weakener_fixtures.py  test_java_executable.py  test_litellm_backend.py  (+18 more)
weakener-engine/: README.md
(+1238 files in other folders)
