[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uofa-cli"
version = "0.5.0"
description = "CLI for creating, validating, and signing Unit of Assurance evidence packages for computational modeling and simulation credibility"
readme = "README.md"
license = "CC0-1.0"
requires-python = ">=3.10"
authors = [
    { name = "Vishnu Viswanathan" },
]
keywords = [
    "verification",
    "validation",
    "credibility",
    "simulation",
    "computational-modeling",
    "vv40",
    "json-ld",
    "shacl",
    "digital-signature",
    "evidence-packaging",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyshacl",
    "rdflib",
    "cryptography",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
test = ["pytest"]
excel = ["openpyxl"]
llm = [
    "litellm>=1.30.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "chardet>=5.0.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
]
corpus = [
    "reportlab>=4.0.0",
    "msoffcrypto-tool>=5.4.0",
    "openpyxl>=3.1.0",
]

[project.urls]
Homepage = "https://crediblesimulation.com"
Repository = "https://github.com/cloudronin/uofa"
Documentation = "https://github.com/cloudronin/uofa/blob/main/docs/getting-started.md"
Issues = "https://github.com/cloudronin/uofa/issues"

[project.scripts]
uofa = "uofa_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uofa_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
