[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uofa-cli"
version = "0.6.6"
description = "CLI for creating, validating, and signing Unit of Assurance evidence packages for computational modeling and simulation credibility"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Vishnu Viswanathan" },
]
keywords = [
    "verification",
    "validation",
    "credibility",
    "simulation",
    "computational-modeling",
    "vv40",
    "json-ld",
    "shacl",
    "digital-signature",
    "evidence-packaging",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyshacl",
    "rdflib",
    "cryptography",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
test = ["pytest"]
excel = ["openpyxl"]
# REQ-DIST-002: deps required by the LLM-backed `uofa extract` pipeline
# AND by `uofa setup` (which downloads the Ollama runtime + qwen3.5:4b
# model into a UofA-managed directory). Renamed from `llm` in v0.5 to
# match the spec; install via `pip install uofa[extract]`.
extract = [
    "litellm>=1.30.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "chardet>=5.0.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    # Required by the interpretation pipeline (`--explain` flag, spec v0.4)
    # for prompt template rendering. Bundled here rather than in a separate
    # `explain` extra because the unified LLM abstraction §4.10 means
    # extract and explain share the same install footprint.
    "jinja2>=3.1",
]
corpus = [
    "reportlab>=4.0.0",
    "msoffcrypto-tool>=5.4.0",
    "openpyxl>=3.1.0",
]
# Phase 2 v1.8 §11 / §16 M7 export tooling. Optional because weasyprint
# pulls a non-trivial native toolchain (cairo, pango); only needed when
# generating Figure 3.x / phase2_review_packet.md.
export = [
    "weasyprint>=60",
]

[project.urls]
Homepage = "https://crediblesimulation.com"
Repository = "https://github.com/cloudronin/uofa"
Documentation = "https://github.com/cloudronin/uofa/blob/main/docs/onboarding.md"
Issues = "https://github.com/cloudronin/uofa/issues"

[project.scripts]
uofa = "uofa_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uofa_cli"]
# Both directories are .gitignored; mark as artifacts so the bundled
# rule-engine JAR (UOFA_BUNDLE_JAR=1) and per-platform JRE
# (UOFA_BUNDLE_PLATFORM=<tag>) populated by hatch_build.py ship in the wheel.
artifacts = [
    "src/uofa_cli/_engine/*.jar",
    "src/uofa_cli/_runtime/**",
]

# Inject the engine assets (packs/, spec/, keys/research.pub) into the wheel
# under uofa_cli/_data/repo/ so that `uofa check`, `uofa shacl`, `uofa rules`,
# and `uofa demo` work after `pip install` from any directory — not only
# from inside a UofA source checkout.
[tool.hatch.build.targets.wheel.force-include]
"packs" = "uofa_cli/_data/repo/packs"
"spec" = "uofa_cli/_data/repo/spec"
"keys/research.pub" = "uofa_cli/_data/repo/keys/research.pub"

[tool.hatch.build.targets.sdist]
# Keep platform-specific bundled artifacts out of the sdist; sdist consumers
# rebuild the JAR via Maven and download the JRE via the wheel build hook.
exclude = [
    "src/uofa_cli/_engine/*.jar",
    "src/uofa_cli/_runtime/jre",
    "src/uofa_cli/_runtime/PLATFORM",
    "src/uofa_cli/_runtime/JRE_VERSION",
]

[tool.hatch.build.hooks.custom]
# Activated only when UOFA_BUNDLE_JAR=1 (or, in later PRs,
# UOFA_BUNDLE_PLATFORM=<tag>); otherwise no-op so editable installs work.
path = "build-config/hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
