[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uofa"
version = "0.9.0"
description = "CLI for creating, validating, and signing Unit of Assurance evidence packages for computational modeling and simulation credibility"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Vishnu Viswanathan" },
]
keywords = [
    "verification",
    "validation",
    "credibility",
    "simulation",
    "computational-modeling",
    "vv40",
    "json-ld",
    "shacl",
    "digital-signature",
    "evidence-packaging",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyshacl",
    "rdflib",
    "cryptography",
    "jsonschema>=4.21",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
test = ["pytest"]
excel = ["openpyxl"]
# REQ-DIST-002: deps required by the LLM-backed `uofa extract` pipeline
# AND by `uofa setup` (which downloads the Ollama runtime + qwen3.5:4b
# model into a UofA-managed directory). Renamed from `llm` in v0.5 to
# match the spec; install via `pip install uofa[extract]`.
extract = [
    "litellm>=1.30.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "chardet>=5.0.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    # Required by the interpretation pipeline (`--explain` flag, spec v0.4)
    # for prompt template rendering. Bundled here rather than in a separate
    # `explain` extra because the unified LLM abstraction §4.10 means
    # extract and explain share the same install footprint.
    "jinja2>=3.1",
]
corpus = [
    "reportlab>=4.0.0",
    "msoffcrypto-tool>=5.4.0",
    "openpyxl>=3.1.0",
]
# Phase 2 v1.8 §11 / §16 M7 export tooling. Optional because weasyprint
# pulls a non-trivial native toolchain (cairo, pango); only needed when
# generating Figure 3.x / phase2_review_packet.md.
export = [
    "weasyprint>=60",
]
# Phase 3 LLM-as-judge ensemble (spec v1.5 §5.2). OpenAI + Gemini SDKs for
# the three-judge ensemble; sklearn + statsmodels for Cohen's / Fleiss'
# kappa; aiohttp for HF Endpoints async concurrency; jsonschema for §7.7
# strict-output validation. Install via `pip install uofa[judge]`.
judge = [
    "openai>=1.50",
    "google-generativeai>=0.8",
    "huggingface_hub>=0.24",
    "anthropic>=0.40",
    "litellm>=1.30.0",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "aiohttp>=3.9",
    "jsonschema>=4.21",
    # pytest-asyncio drives the @pytest.mark.asyncio decorators in
    # tests/adversarial/judge/. Without it the async tests either fail
    # outright (pytest 9 strict-marker mode) or silently no-op. Listed
    # here as a runtime-of-tests dep, not a runtime-of-judge dep.
    "pytest-asyncio>=0.23",
]
# Surrogate Interrogation Probe (SIP, `uofa interrogate`). Deliberately lean:
# the model framework (torch/onnx/sklearn/remote) is supplied by the user's
# ModelAdapter, NOT by SIP — that is the sprawl containment. numpy powers the
# measurement wrappers; jsonschema enforces the evidence contract + firewall.
# Install via `pip install uofa[interrogate]`.
interrogate = [
    "numpy>=1.24",
    "jsonschema>=4.21",
    "pytest>=7.0",
]
# AirfRANS eval corpus — the PRIMARY interrogation corpus (pre-trained airfoil
# RANS surrogates + 1000 reference sims + Reynolds/AoA extrapolation splits).
# ODbL-1.0 share-alike, so it is NEVER vendored as committed fixtures — it is
# pulled on demand by the eval harness (`make airfrans-pull`, gated on
# UOFA_AIRFRANS_DIR). Kept separate from [interrogate] so airfrans + its torch
# stack stay out of the default test/runtime install. scikit-learn + joblib
# train/serialize the honest surrogate (Experiment A); matplotlib draws the
# optional split-selection plot (the CSV is the committable artifact regardless).
interrogate-corpus = [
    "airfrans>=0.1.1",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://uofa.net"
Repository = "https://github.com/cloudronin/uofa"
Documentation = "https://uofa.net/docs/onboarding/"
Issues = "https://github.com/cloudronin/uofa/issues"

[project.scripts]
uofa = "uofa_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uofa_cli"]
# Both directories are .gitignored; mark as artifacts so the bundled
# rule-engine JAR (UOFA_BUNDLE_JAR=1) and per-platform JRE
# (UOFA_BUNDLE_PLATFORM=<tag>) populated by hatch_build.py ship in the wheel.
artifacts = [
    "src/uofa_cli/_engine/*.jar",
    "src/uofa_cli/_runtime/**",
]

# Inject the engine assets (packs/, spec/, keys/research.pub) into the wheel
# under uofa_cli/_data/repo/ so that `uofa check`, `uofa shacl`, `uofa rules`,
# and `uofa demo` work after `pip install` from any directory — not only
# from inside a UofA source checkout.
[tool.hatch.build.targets.wheel.force-include]
"packs" = "uofa_cli/_data/repo/packs"
"spec" = "uofa_cli/_data/repo/spec"
# `specs/` (plural) holds the SIP evidence-bundle JSON Schema. It MUST ship in
# the wheel so `uofa interrogate` can validate bundles — and thus run the
# firewall's schema layer — after a non-editable pip install. Without this the
# schema is reachable only from a source checkout and the firewall silently
# no-ops for real users (AGENTS.md §12).
"specs" = "uofa_cli/_data/repo/specs"
"keys/research.pub" = "uofa_cli/_data/repo/keys/research.pub"

[tool.hatch.build.targets.sdist]
# Keep platform-specific bundled artifacts out of the sdist; sdist consumers
# rebuild the JAR via Maven and download the JRE via the wheel build hook.
exclude = [
    "src/uofa_cli/_engine/*.jar",
    "src/uofa_cli/_runtime/jre",
    "src/uofa_cli/_runtime/PLATFORM",
    "src/uofa_cli/_runtime/JRE_VERSION",
]

[tool.hatch.build.hooks.custom]
# Activated only when UOFA_BUNDLE_JAR=1 (or, in later PRs,
# UOFA_BUNDLE_PLATFORM=<tag>); otherwise no-op so editable installs work.
path = "build-config/hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

# Phase 3 judge package coverage gate (acceptance criterion 6 in the
# Phase 3 implementation plan). Run via:
#     pytest tests/adversarial/judge/ \
#       --cov=src/uofa_cli/adversarial/judge --cov-fail-under=85
# Not enforced on the global `pytest tests/` run because the rest of
# the codebase has its own coverage shape.
